# OpenGL_Startup

./: CMakeLists.txt
src/: GLTestConfig.h.in  main.cpp
